# onthespot

./: Dockerfile  ci.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: release-builder-clean-spotify.yml
docs/: USAGE.md
scripts/: build_appimage.sh  build_linux.sh  build_windows.bat
src/onthespot/: accounts.py  cli.py  downloader.py  gui.py  otsconfig.py  parse_item.py  runtimedata.py  search.py  utils.py  web.py
src/onthespot/api/: apple_music.py  bandcamp.py  crunchyroll.py  deezer.py  generic.py  qobuz.py  soundcloud.py  spotify.py  tidal.py  youtube_music.py
src/onthespot/qt/: dl_progressbtn.py  mainui.py  minidialog.py  settings.py  thumb_listitem.py
src/onthespot/qt/qtui/: main.ui
src/onthespot/resources/web/: settings.html
