[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onthespot"
version = "1.1.4"
description = "A GUI music downloader for Apple Music, Bandcamp, Deezer, Qobuz, Spotify, Tidal, and more."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-2.0-only" }
keywords = ["music", "downloader", "audio", "onthespot"]
authors = [
    { name = "Justin Donofrio", email = "justin026@protonmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "flask>=3.1.0",
    "flask-login>=0.6.3",
    "librespot @ git+https://github.com/justin025/librespot-python.git",
    "m3u8>=6.0.0",
    "music-tag>=0.4.3",
    "mutagen>=1.47.0",
    "pillow>=10.4.0",
    "pyqt6>=6.8.0",
    "pyqt6-sip>=13.9.1",
    "pywidevine>=1.8.0",
    "requests>=2.32.3",
    "urllib3>=2.2.3",
    "yt-dlp>=2025.1.12",
]

[project.urls]
Homepage = "https://github.com/leviathonbeast/onthespot"
Repository = "https://github.com/leviathonbeast/onthespot"
Issues = "https://github.com/leviathonbeast/onthespot/issues"
Upstream = "https://github.com/justin025/onthespot"

[project.scripts]
onthespot-cli = "onthespot.cli:main"
onthespot-web = "onthespot.web:main"
onthespot-gui = "onthespot.gui:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "mypy>=1.11",
    "pyinstaller>=6.10",
    "build>=1.2",
    "types-requests",
]

# ---------------------------------------------------------------------------
# Setuptools configuration (replaces setup.cfg)
# ---------------------------------------------------------------------------

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.ui", "*.png", "*.desktop", "*.qm", "*.html", "*.css", "*.ico", "*.js"]

# ---------------------------------------------------------------------------
# Ruff — linter + formatter
# Start lenient; this is a brownfield migration. Tighten rules over time.
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 120
target-version = "py310"
src = ["src"]
extend-exclude = ["build", "dist", "venv", ".venv"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
]
ignore = [
    "E501",  # line length — defer to formatter
    "B008",  # function calls in argument defaults (common Qt pattern)
]

# ---------------------------------------------------------------------------
# Mypy — type checker
# Brownfield-friendly defaults. Tighten when type hints are added.
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.10"
files = ["src/onthespot"]
ignore_missing_imports = true
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = false
check_untyped_defs = false
